EMA: Faculty Initial Commit

--- a/website/02-Education/ema/call-2021/08-careers-part4.html
+++ b/website/02-Education/ema/call-2021/08-careers-part4.html
@@ -1,140 +1,3 @@
-<p class="subtitle_page_programme">EMA Internship Programme</p>
-<p class="margin_bottom_20">Every year since 1998/1999, EIUC and now the Global Campus of Human Rights, with the support of the European Union, has awarded a paid internship in the field of human rights to the 15 students who have achieved the highest results during each academic year. Internships in inter-governmental, governmental and non-governmental organisations have given the selected graduates an opportunity to immediately put into practice the knowledge acquired during the course.</p>
-<div class="text_read_more"><br>
-    <p class="margin_bottom_20">Among the institutions that have hosted our graduates throughout these years are:</p>
-    <ul class="lista_con_pallini margin_bottom_20">
-        <li>
-            <strong>
-                Delegation of the European Union to the United Nations and other
-                International Organisations in Geneva
-            </strong>
-            <em>
-                – restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                Office of the EU Special Representative for Human Rights – European
-                External Action Service in Brussels
-            </strong>
-            –
-            <em>
-                restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                Delegation of the European Union to the United Nations in New York
-            </strong>
-            <em>
-                – restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                Delegation of the European Union to the Council of Europe in
-                Strasbourg
-            </strong>
-            <em>
-                – restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                Delegation of the European Union to the State of Israel in Tel Aviv
-            </strong>
-            <em>
-                – restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                Delegation of the European Union to the Republic of Sudan, Khartoum
-            </strong>
-            <em>
-                – restricted to EU citizens with no previous experience in a EU
-                Institution
-            </em>
-        </li>
-        <li>
-            <strong>
-                United Nations Educational, Scientific and Cultural Organization
-                (UNESCO),
-            </strong>
-            Paris
-        </li>
-        <li>
-            <strong>Human Rights Watch (HRW), </strong>
-            Brussels
-        </li>
-        <li>
-            <strong>International Organization for Migration (IOM)</strong>
-            , Beijing
-        </li>
-        <li>
-            <strong>
-                International Rehabilitation Council for Torture Victims (IRCT),
-            </strong>
-            Copenhagen
-        </li>
-        <li>
-            <strong>No Peace Without Justice (NPWJ)</strong>
-            , Brussels
-        </li>
-        <li>
-            <strong>International Commission of Jurists (ICJ)</strong>
-            – office in Brussels
-        </li>
-        <li>
-            <strong>World Organisation Against Torture (OMCT)</strong>
-            – office in Geneva
-        </li>
-        <li>
-            <strong>Terre des Hommes International Federation (TDHIF)</strong>
-            , Brussels
-        </li>
-        <li>
-            <strong>
-                OSCE Office for Democratic Institutions and Human Rights (ODIHR),
-            </strong>
-            Warsaw
-        </li>
-        <li>
-            <strong>Protection International (PI),</strong>
-            Brussels
-        </li>
-        <li>
-            <strong>Open Society Foundations (OSF), </strong>
-            Brussels
-        </li>
-        <li>
-            <strong>Austrian Development Agency, </strong>
-            Vienna
-        </li>
-        <li>
-            <strong>Right Livelihood Foundation, </strong>Geneva
-        </li>
-        <li>
-            <strong>
-                European Network of National Human Rights Institutions (ENNHRI),
-            </strong>
-            Brussels
-        </li>
-    </ul>
-    <p class="margin_bottom_20">The EMA Internship Programme has already offered a unique opportunity to over 200 graduates to access the job market. It is in fact an excellent way to transition into a working career, having become a platform for many generations of students that are now employed or have been employed within the organisations where they have interned thanks to EIUC. It has also helped creating a powerful alumni network that has become instrumental in facilitating interaction between different institutions.</p>
-    <p class="margin_bottom_20"><em>The EMA Internship Programme in the EC Delegation in Beijing was another fantastic experience and while working in China, as well as in every place I have worked since including Brussels, Darfur, Democratic Republic of Congo and Sierra Leone, I was lucky enough to befriend new masterini and to feel part of a truly global network. <br>(Matthew Willner-Reid, EMA Graduate 2005/2006, Cooperation Officer for Services to Vulnerable Populations, EU Delegation in Kabul)</em></p>
-</div>
-<div class="accordion accordion_gc_arab read_more">
-    <div class="icon_e_title_accordion">
-        <div class="piu_accordion">
-            <div class="verticale">[nbsp]</div>
-            <div class="orizzontale">[nbsp]</div>
-        </div>
-        <p class="title_accordion more_less">Read More</p>
-    </div>
-</div>
+<p class="subtitle_page_programme">GCA Mentoring Programme</p>
+<p class="margin_bottom_20">The Global Campus Alumni Association runs a mentoring programme aimed to connect alumni with more experienced human rights professionals for support, advice and exchange of fresh ideas. The Programme provides open space for alumni interested in receiving guidance on their professional and personal development, as well as for human rights experts keen on building their coaching skills and supporting and inspiring fellow alumni to fulfil their potential. Since 2012, over 220 mentors and mentees have participated and benefited from this opportunity.</p>
+   <p class="margin_bottom_20"><em>It was a great opportunity to understand the way to redirect my career to go back to where my passion and interests are. My mentor helped me with that. She tried to translate my ideas and will and put them into practice. <br>Mentee 2015</em></p>
