--- a/website/02-Education/ema/call-2021/10-about-entry-requirements-part3.html
+++ b/website/02-Education/ema/call-2021/10-about-entry-requirements-part3.html
@@ -9,26 +9,27 @@
             </div>
         </div>
         <div class="list_accordion">
-            <p class="margin_bottom_20">Applicants are required to hold a <strong>university degree of a high standard</strong> in a field relevant to human rights, including disciplines in law, social sciences and humanities, and must have a minimum of 180 ECTS (Bachelor/General Degree).</p>
-            <p class="margin_bottom_10">Candidates can be considered as long as they have obtained a degree corresponding to:</p>
+            <p class="margin_bottom_20">EMA is open to a maximum of 90 candidates from EU and non-EU countries.</p>
+            <p class="margin_bottom_10">Candidates must meet the following entry requirements:</p>
             <ul class="lista_con_pallini margin_bottom_20">
-                <li>180 ECTS credits (generally a 3-year course) or</li>
-                <li>240 ECTS credits (generally a 4-year course) or</li>
-                <li>A combination of a degree of 180 ECTS and relevant proven additional experience or studies (such as 1-year MA or summer courses)</li>
+                <li>Hold a <strong>university degree of a high standard</strong> in a field relevant to human rights, including disciplines in Law, Social Sciences and Humanities, and must have a minimum of 180 ECTS (Bachelor/General Degree).</li>
+                <li>Have <strong>certified knowledge of English</strong> at least at level B2. Accepted certificates are IELTS (min. score 6), TOEFL (min. 80 for the IBT) and Cambridge exams (min. score 169-175), obtained no more than 3 years before the start of the programme.</li>
             </ul>
             <p class="margin_bottom_20">Applicants completing the degree entry requirements subsequently to the application deadline are requested to provide a current transcript of exams. Eventual admission into the programme is conditional upon receipt of documentation of the completed degree (by 31 August).</p>
-            <p class="margin_bottom_20">All selected candidates who hold a non-EU degree are required to produce upon admission a “declaration of value” of their degree. Non-EU candidates are moreover required to obtain a study visa, which must cover the entire duration of the academic year (from September to September). Both the study visa and the “declaration of value” are preconditions for enrolment and should be requested from the competent Italian embassy or representation offices.</p>
-            <p class="margin_bottom_10"><strong>Additional studies and experience</strong></p>
-            <p class="margin_bottom_20">Additional studies and practical experience in the area of human rights in inter-governmental, governmental, or non-governmental organisations are helpful.</p>
-            <p class="margin_bottom_10"><strong>Language competence</strong></p>
-            <p class="margin_bottom_20">Certified fluency in English is an admission requirement for the programme. </p>
+            <p class="margin_bottom_10">Applications will be assessed against the following selection criteria:</p>
+            <ul class="lista_con_pallini">
+                <li>Academic ability and background (i.e. university final grade, relevance of the degree and thesis subject);</li>
+                <li>Relevant additional academic work, courses or publications</li>
+                <li>Relevant practical experience</li>
+                <li>Motivation</li>
+            </ul>
         </div>
     </div>
 </div>
-<style>
-.list_accordion li {
-    list-style-position: inside;
-    list-style-type: disc;
-    margin-bottom: 8px;
-}
-</style>
+    <style>
+    .list_accordion li {
+        list-style-position: inside;
+        list-style-type: disc;
+        margin-bottom: 8px;
+    }
+    </style>
