Fixes to OC IEO course outline, faculty

--- a/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
+++ b/website/02-Education/OC/IEO/02-lecturers-experts-part02.html
@@ -7,9 +7,7 @@
 }</style>
 
 -->
-
-<div class="table_accordion">
-    <a class="top" name="dm"></a>
+<div class="table_accordion"><a class="top" name="dm"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Demetrio_Lazagna_IEO_gchumnanrights.png" alt="Demetrio Lazagna">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Training Responsible</p>
@@ -46,15 +44,14 @@
 </div>
 </div>
 </div>
-</div>-->
-    <a class="top" name="ac"></a>
+</div>--> <a class="top" name="ac"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Alice_Colombi_IEO_gchumanrights.png" alt="Alice Colombi">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
-            <p class="ruolo_persona titolo_gc_europe">Media Expert</p>
+            <p class="ruolo_persona titolo_gc_europe">Media and Digital Communications Expert</p>
             <p class="subtitle_page_programme margin_bottom_20">Alice Colombi</p>
             <p class="margin_bottom_20">Alice is an international consultant in media analysis and social media monitoring with some 15 years’ experience in the field of elections, democracy and governance from across Eastern and Western Europe, Central Asia, Africa, Central and South America.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Registered publicist in the Italian Journalists’ professional Order since 2010, she has worked as a consultant and trainer with several Italian and international academic and private institutions, including Osservatorio di Pavia, institute specialized in mass media communication and international democratisation processes' analysis. She participated as a media expert in 20 election observation missions with the EU and the OSCE/ODIHR, as well as technical assistance projects in South Sudan and Madagascar. Alice holds a degree in Foreign Languages and Intercultural Mediation.</p>
+                <p class="margin_bottom_20">Registered publicist in the Italian Journalists’ professional Order since 2010, she has worked as a consultant and trainer with several Italian and international academic and private institutions, including Osservatorio di Pavia, institute specialized in mass media communication and international democratisation processes' analysis. She participated as a media and digital communications expert in 20 election observation missions with the EU and the OSCE/ODIHR, as well as technical assistance projects in South Sudan and Madagascar. Alice holds a degree in Foreign Languages and Intercultural Mediation.</p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -102,8 +99,7 @@
 </div>
 </div>
 </div>
-</div>-->
-    <a class="top" name="cg"></a>
+</div>--> <a class="top" name="cg"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2019/Charlemagne_Gomez_global_campus.jpg" alt="Charlemagne Gomez">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Election Observation Expert</p>
@@ -112,6 +108,50 @@
             <div class="text_read_more">
                 <p class="margin_bottom_20">She has over 17 years experience of working in democracy and gender mainly in a post-conflict setting. She has participated in over 25 election observation missions both as an observer as well as a core team member for the EU, OSCE, the Carter Center and a Dutch NGO.</p>
                 <p>She has also provided technical assistance to the Electoral Commissions of Afghanistan and South Sudan, the Human Rights Commission in South Sudan and worked as a Gender and Legal Advisor to the National Parliament of Timor-Leste. Since 2013 she has worked as freelance consultant, conducting trainings on election observation, female political participation and carries out evaluations of democratic governance projects and projects on gender on behalf of the UN, EU and other key international organizations working on these issues.</p>
+            </div>
+            <div class="accordion accordion_gc_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="top" name="vm"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Vladimir_Misev_global_campus-eiuc.jpg" alt="Magnus Ohman">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Election Adviser</p>
+            <p class="subtitle_page_programme margin_bottom_20">Vladimir Misev</p>
+            <p class="margin_bottom_20">Vladimir Misev has a background in political science. He has been working as an Election Adviser in ODIHR since 2015 and as an election consultant since 2004.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">Vladimir worked as a lecturer of political science and as a researcher in a several think-tanks in the Balkan region. He has over 15 years’ experience in the field of democratization, research and management, and elections. </p>
+                <p class="margin_bottom_20">Vladimir has been part of more than 25 ODIHR missions in different countries in different capacities.</p>
+            </div>
+            <div class="accordion accordion_gc_europe read_more">
+                <div class="icon_e_title_accordion">
+                    <div class="piu_accordion">
+                        <div class="verticale">[nbsp]</div>
+                        <div class="orizzontale">[nbsp]</div>
+                    </div>
+                    <p class="title_accordion more_less">Read More</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <a class="top" name="gnf"></a>
+    <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Gianandrea_Nelli_Feroci_IEO_gchumanrights.png" alt="Gianandrea Nelli Feroci">
+        <div class="description_page_programme no_border no_padding no_margin_bottom">
+            <p class="ruolo_persona titolo_gc_europe">Election Expert</p>
+            <p class="subtitle_page_programme margin_bottom_20">Gianandrea Nelli Feroci</p>
+            <p class="margin_bottom_20">Gianandrea Nelli Feroci joined The Carter Center in June 2017, where he manages the Center’s Democracy Program projects in Latin America focusing on electoral processes and reforms.</p>
+            <div class="text_read_more">
+                <p class="margin_bottom_20">He has more than 13 years of experience in political economy analysis and management, specializing in democratic governance planning and implementation at regional and country levels in Latin America and the Caribbean, Asia, and Africa.</p>
+                <p class="margin_bottom_20">He has worked for international and multilateral organizations – including UNDP, UNOPS, and the EU – as well as for international NGOs Oxfam International, Christian Aid, and Agenfor International.</p>
+                <p class="margin_bottom_20">He has published articles on development policy issues in academic journals and magazines based in Argentina, Italy, Mexico, the United Kingdom, and Switzerland.</p>
+                <p>Nelli Feroci has a master’s degree in modern and contemporary history from University La Sapienza in Rome, Italy; and University Complutense, in Madrid, Spain; and a master's degree in comparative politics from the London School of Economics and Political Science, where he specialized in democratic transition processes in Latin America and the Caribbean, South Asia, and Eastern Europe.</p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
@@ -261,25 +301,7 @@
 </div>
 </div>
 </div>
-<div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Vladimir_Misev_global_campus-eiuc.jpg" alt="Magnus Ohman">
-<div class="description_page_programme no_border no_padding no_margin_bottom">
-<p class="subtitle_page_programme margin_bottom_20">Vladimir Misev</p>
-<p class="margin_bottom_20">Vladimir Misev has a background in political science. He is working as an Election Adviser in ODIHR since 2015 and as an election consultant since 2004.</p>
-<div class="text_read_more">
-<p class="margin_bottom_20">Vladimir worked as a lecturer of political science and as a researcher in a several think-tanks in the Balkan region. He has over 15 years’ experience in the field of democratization, research and management, and elections.</p>
-<p class="margin_bottom_20">Vladimir has been part of more than 25 ODIHR missions in different countries in different capacities.</p>
-</div>
-<div class="accordion accordion_gc_europe read_more">
-<div class="icon_e_title_accordion">
-<div class="piu_accordion">
-<div class="verticale">[nbsp]</div>
-<div class="orizzontale">[nbsp]</div>
-</div>
-<p class="title_accordion more_less">Read More</p>
-</div>
-</div>
-</div>
-</div>-->
+-->
     <!-- <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2018/Magnus_Ohman_global_campus_eiuc.jpg" alt="Magnus Ohman">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="subtitle_page_programme margin_bottom_20">Magnus Ohman</p>
@@ -365,16 +387,15 @@
                 </div>
             </div>
         </div>
-    </div>-->
-    <a class="top" name="ar"></a>
+    </div>--> <a class="top" name="ar"></a>
     <div class="table_people_cell"><img class="img_persona" src="files/eiuc/ieo/2020/Armin_Rabitsch_IEO_gchumanrights.png" alt="Armin Rabitsch">
         <div class="description_page_programme no_border no_padding no_margin_bottom">
             <p class="ruolo_persona titolo_gc_europe">Chairperson of Election-Watch.EU</p>
             <p class="subtitle_page_programme margin_bottom_20">Armin Rabitsch</p>
             <p class="margin_bottom_20">Armin is the chairperson and co-founder of Election-Watch.EU, a non-partisan CSO, which conducted the first comprehensive election assessment mission to the European Parliament elections, and is advocating for participatory electoral reforms and young voter education in the Europe.</p>
             <div class="text_read_more">
-                <p class="margin_bottom_20">Armin has been working on democratisation and strengthening human rights with a focus on electoral assistance, political assessment, human rights and conflict mitigation. Armin held various fixed-term assignments as IFES Country Director, OSCE/ODIHR Senior Election Adviser and UNDP Governance Analyst. He worked as democracy support & election expert in more than 30 countries (African, American, Arab, Asian, and Pacific) for various international organisations, most recently for a UNDP funded project on peace and conflict monitoring in Iraq. Armin is currently co-drafting a UNESCO/UNDP guide for electoral practitioners on elections & internet, social media, and AI.</p>
-                <p class="margin_bottom_20">Armin holds a PhD in international relations and an LL.M. in international Human Rights Law. He lectures on electoral assistance in Europe and abroad, within the Masters Program in Peace Studies at the University of Innsbruck/Austria, at Universities in Baghdad and Erbil/Iraq, as well as at the Global Campus of Human Rights in Venice/Italy. </p>
+                <p class="margin_bottom_20">Armin has been working on democratisation and strengthening human rights with a focus on electoral assistance, political assessment, human rights and conflict mitigation. Armin held various fixed-term assignments as IFES Country Director, OSCE/ODIHR Senior Election Adviser and UNDP Governance Analyst. He worked as democracy support [&amp;] election expert in more than 30 countries (African, American, Arab, Asian, and Pacific) for various international organisations, most recently for a UNDP funded project on peace and conflict monitoring in Iraq. Armin is currently co-drafting a UNESCO/UNDP guide for electoral practitioners on elections [&amp;] internet, social media, and AI.</p>
+                <p class="margin_bottom_20">Armin holds a PhD in international relations and an LL.M. in international Human Rights Law. He lectures on electoral assistance in Europe and abroad, within the Masters Program in Peace Studies at the University of Innsbruck/Austria, at Universities in Baghdad and Erbil/Iraq, as well as at the Global Campus of Human Rights in Venice/Italy.</p>
             </div>
             <div class="accordion accordion_gc_europe read_more">
                 <div class="icon_e_title_accordion">
