--- a/website/02-Education/OC/IEO/03-course-outline-part02.html
+++ b/website/02-Education/OC/IEO/03-course-outline-part02.html
@@ -4,240 +4,261 @@
 <p><strong>Module 2</strong> is dedicated to more specific <strong>contexts and issues</strong> covering a number of areas (such as disability rights and migration) as well as aspects related to inclusive education (such as for instance inclusion of minorities or the preventative role of inclusive education against violence and extremism). </p>
 <p><strong>Module 3</strong> deals with <strong>the principles of the whole school and a rights-based approach to education</strong>. In particular, it stresses the importance of participatory management of the school community, which involves addressing the needs of learners, education personnel and the wider community, not only within the curriculum, but across the whole-school and learning environment. </p>
 <p class="margin_bottom_20">[nbsp]</p>-->
-
 <style>
 .timeline {
-  list-style: none;
-  padding: 20px 0 20px;
-  position: relative;
+    list-style: none;
+    padding: 20px 0 20px;
+    position: relative;
 }
+
 .timeline:before {
-  top: 0;
-  bottom: 0;
-  position: absolute;
-  content: " ";
-  width: 3px;
-  background-color: #eeeeee;
-  left: 50%;
-  margin-left: -1.5px;
+    top: 0;
+    bottom: 0;
+    position: absolute;
+    content: " ";
+    width: 3px;
+    background-color: #eeeeee;
+    left: 50%;
+    margin-left: -1.5px;
 }
-.timeline > li {
-  margin-bottom: 20px;
-  position: relative;
+
+.timeline>li {
+    margin-bottom: 20px;
+    position: relative;
 }
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
+
+.timeline>li:before,
+.timeline>li:after {
+    content: " ";
+    display: table;
 }
-.timeline > li:after {
-  clear: both;
+
+.timeline>li:after {
+    clear: both;
 }
-.timeline > li:before,
-.timeline > li:after {
-  content: " ";
-  display: table;
+
+.timeline>li:before,
+.timeline>li:after {
+    content: " ";
+    display: table;
 }
-.timeline > li:after {
-  clear: both;
+
+.timeline>li:after {
+    clear: both;
 }
-.timeline > li > .timeline-panel {
-  width: 46%;
-  float: left;
-  border: 1px solid #e0dfdf;
-  border-radius: 2px;
-  padding: 20px;
-  position: relative;
-  -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
-  box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+
+.timeline>li>.timeline-panel {
+    width: 46%;
+    float: left;
+    border: 1px solid #e0dfdf;
+    border-radius: 2px;
+    padding: 20px;
+    position: relative;
+    -webkit-box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 1px 6px rgba(0, 0, 0, 0.175);
 }
-.timeline > li > .timeline-panel:before {
-  position: absolute;
-  top: 26px;
-  right: -15px;
-  display: inline-block;
-  border-top: 15px solid transparent;
-  border-left: 15px solid #e0dfdf;
-  border-right: 0 solid #e0dfdf;
-  border-bottom: 15px solid transparent;
-  content: " ";
+
+.timeline>li>.timeline-panel:before {
+    position: absolute;
+    top: 26px;
+    right: -15px;
+    display: inline-block;
+    border-top: 15px solid transparent;
+    border-left: 15px solid #e0dfdf;
+    border-right: 0 solid #e0dfdf;
+    border-bottom: 15px solid transparent;
+    content: " ";
 }
-.timeline > li > .timeline-panel:after {
-  position: absolute;
-  top: 27px;
-  right: -14px;
-  display: inline-block;
-  border-top: 14px solid transparent;
-  border-left: 14px solid #fff;
-  border-right: 0 solid #fff;
-  border-bottom: 14px solid transparent;
-  content: " ";
+
+.timeline>li>.timeline-panel:after {
+    position: absolute;
+    top: 27px;
+    right: -14px;
+    display: inline-block;
+    border-top: 14px solid transparent;
+    border-left: 14px solid #fff;
+    border-right: 0 solid #fff;
+    border-bottom: 14px solid transparent;
+    content: " ";
 }
-.timeline > li > .timeline-badge {
-  color: #fff;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  font-size: 1.4em;
-  text-align: center;
-  position: absolute;
-  top: 16px;
-  left: 50%;
-  margin-left: -25px;
-  background-color: #009fe3;
-  z-index: 100;
-  border-top-right-radius: 50%;
-  border-top-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  border-bottom-left-radius: 50%;
+
+.timeline>li>.timeline-badge {
+    color: #fff;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    font-size: 1.4em;
+    text-align: center;
+    position: absolute;
+    top: 16px;
+    left: 50%;
+    margin-left: -25px;
+    background-color: #009fe3;
+    z-index: 100;
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+    border-bottom-right-radius: 50%;
+    border-bottom-left-radius: 50%;
 }
-.timeline > li.timeline-inverted > .timeline-panel {
-  float: right;
+
+.timeline>li.timeline-inverted>.timeline-panel {
+    float: right;
 }
-.timeline > li.timeline-inverted > .timeline-panel:before {
-  border-left-width: 0;
-  border-right-width: 15px;
-  left: -15px;
-  right: auto;
+
+.timeline>li.timeline-inverted>.timeline-panel:before {
+    border-left-width: 0;
+    border-right-width: 15px;
+    left: -15px;
+    right: auto;
 }
-.timeline > li.timeline-inverted > .timeline-panel:after {
-  border-left-width: 0;
-  border-right-width: 14px;
-  left: -14px;
-  right: auto;
+
+.timeline>li.timeline-inverted>.timeline-panel:after {
+    border-left-width: 0;
+    border-right-width: 14px;
+    left: -14px;
+    right: auto;
 }
+
 .timeline-badge.first1 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-badge.second2 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-badge.third3 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-badge.fourth4 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-badge.fifth5 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-badge.sixth6 {
-  background-color: #009fe3; !important;
+    background-color: #009fe3;
+     !important;
 }
+
 .timeline-title {
-  margin-top: 0;
-  color: inherit;
-  /*margin-bottom: -10px !important;*/
-  font-weight: 400;
-}
-.timeline-body > p,
-.timeline-body > ul {
-  margin-bottom: 0;
-}
-.timeline-body > p + p {
-  margin-top: 5px;
-}
-#timeline{
-	font-size: 20px;
-	font-weight: 400;
-	text-align: center;
+    margin-top: 0;
+    color: inherit;
+    /*margin-bottom: -10px !important;*/
+    font-weight: 400;
 }
 
+.timeline-body>p,
+.timeline-body>ul {
+    margin-bottom: 0;
+}
 
+.timeline-body>p+p {
+    margin-top: 5px;
+}
+
+#timeline {
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+}
 </style>
-
-
-
 <h3 id="timeline" style="text-align:center; font-weight: 400;">Course Outline</h3>
-
 <ul class="timeline">
     <li>
-      <div class="timeline-badge first1">1</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 1 – February 22</h4>
-          <h4 class="timeline-title">International electoral observation: an introduction</h4>
+        <div class="timeline-badge first1">1</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 1 – February 22</h4>
+                <h4 class="timeline-title">International electoral observation: an introduction</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#dm" title="Demetrio Lazagna">Demetrio Lazagna</a>, Training Responsible of the Course
+                </p>
+            </div>
         </div>
-        <div class="timeline-body">
-        	<p>
-            <br><a class="titolo_gc_europe" href="{{link_url::603}}#dm" title="Demetrio Lazagna">Demetrio Lazagna</a>, Training Responsible of the Course
-          	</p>
-        </div>
-      </div>
     </li>
     <li class="timeline-inverted">
-      <div class="timeline-badge second2">2</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 2 – February 23</h4>
-		  <h4 class="timeline-title">Electoral observation history and international legal standards</h4>
+        <div class="timeline-badge second2">2</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 2 – February 23</h4>
+                <h4 class="timeline-title">Electoral observation history and international legal standards</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#ar" title="Armin Rabitsch">Armin Rabitsch</a>, Election observation expert
+                </p>
+            </div>
         </div>
-        <div class="timeline-body">
-	      <p> 
-      		<br><a class="titolo_gc_europe" href="{{link_url::603}}#ar" title="Armin Rabitsch">Armin Rabitsch</a>, Election observation expert
-			</p>
-        </div>
-      </div>
-    </li>
-
-
-    <li>
-      <div class="timeline-badge third3">3</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 3 – February 24</h4>
-          <h4 class="timeline-title">Meet the sending authorities</h4>
-        </div>
-        <div class="timeline-body">
-	      <p> 
-      		<!-- <br><a class="titolo_gc_europe" href="{{link_url::603}}#sb">Simon Baker</a>, Trafficking Expert 
-	  		<br><a class="titolo_gc_europe" href="{{link_url::603}}#bg">Borislav Gerasimov</a>, Global Alliance Against Traffic in Women (GAATW) and Editor of The Anti-Trafficking Review  -->
-	  		<br>Representatives of European focal point + EEAS + The Carter Center (tbc)
-          </p>
-        </div>
-      </div>
-    </li>
-    <li class="timeline-inverted">
-      <div class="timeline-badge fourth4">4</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 4 – February 25</h4>
-          <h4 class="timeline-title">Short term observers: code of conduct, observing and reporting tools</h4>
-        </div>
-         <div class="timeline-body">
-	      	<p> 
-            <br><a class="titolo_gc_europe" href="{{link_url::603}}#cg" title="Charlemagne Gomez">Charlemagne Gomez</a>, Election Observation Expert
-	  		</p>	
-		 </div>
-      </div>
     </li>
     <li>
-      <div class="timeline-badge fifth5">5</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 5 – February 26</h4>
-          <h4 class="timeline-title">The media in electoral observation missions</h4>
+        <div class="timeline-badge third3">3</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 3 – February 24</h4>
+                <h4 class="timeline-title">Meet the sending authorities</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#vm" title="Vladimir Misev">Vladimir Misev</a>, ODIHR
+                    <br>Cristina Castagnoli, EEAS
+                    <br>Andrea Nelli Feroci, The Carter Center
+                    <br>Christian Morresi, Italian Ministry of Foreign Affairs
+                </p>
+            </div>
         </div>
-        <div class="timeline-body">
-	      	<p> 
-         	<br><a class="titolo_gc_europe" href="{{link_url::603}}#ac" title="Alice Colombi">Alice Colombi</a>,  Media and Digital Communications Expert	  		
-	  		</p>
-		</div>
-      </div>
     </li>
     <li class="timeline-inverted">
-      <div class="timeline-badge sixth6">6</div>
-      <div class="timeline-panel">
-        <div class="timeline-heading">
-          <h4 class="timeline-title">Day 6 – February 27</h4>
-          <h4 class="timeline-title">Short term observers: living the field</h4>
+        <div class="timeline-badge fourth4">4</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 4 – February 25</h4>
+                <h4 class="timeline-title">Short term observers: code of conduct, observing and reporting tools</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#cg" title="Charlemagne Gomez">Charlemagne Gomez</a>, Election Observation Expert
+                </p>
+            </div>
         </div>
-         <div class="timeline-body">
-	      	<p> 
-            <br><a class="titolo_gc_europe" href="{{link_url::603}}#cg" title="Charlemagne Gomez">Charlemagne Gomez</a>, Election Observation Expert
-            <br><a class="titolo_gc_europe" href="{{link_url::603}}#dm" title="Demetrio Lazagna">Demetrio Lazagna</a>, Training Responsible of the Course
-	  		</p>	
-		 </div>
-      </div>
+    </li>
+    <li>
+        <div class="timeline-badge fifth5">5</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 5 – February 26</h4>
+                <h4 class="timeline-title">The media in electoral observation missions</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#ac" title="Alice Colombi">Alice Colombi</a>, Media and Digital Communications Expert
+                </p>
+            </div>
+        </div>
+    </li>
+    <li class="timeline-inverted">
+        <div class="timeline-badge sixth6">6</div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="timeline-title">Day 6 – February 27</h4>
+                <h4 class="timeline-title">Short term observers: living the field</h4>
+            </div>
+            <div class="timeline-body">
+                <p>
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#cg" title="Charlemagne Gomez">Charlemagne Gomez</a>, Election Observation Expert
+                    <br><a class="titolo_gc_europe" href="{{link_url::603}}#dm" title="Demetrio Lazagna">Demetrio Lazagna</a>, Training Responsible of the Course
+                </p>
+            </div>
+        </div>
     </li>
 </ul>
